# pptx2png

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  bomber.py  common.py  docker-compose.yaml  pyproject.toml
converter/: __init__.py  converter.py  pdf2png.py  pptx2pdf.py
