[tool.poetry]
name = "lock-example"
version = "0.1.0"
description = ""
authors = ["default <anonymous@noreply.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.20"
pdf2image = "^1.17.0"
aiohttp = "^3.12.13"
orjson = "^3.10.18"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "converter"
known_third_party = ["fastapi,pydantic,pydantic_settings,uvicorn,pdf2image,aiohttp,orjson"]
